tests/ui/parser/impl-parsing-2.stderr
error: `default` is not followed by an item
  --> $DIR/impl-parsing-2.rs:3:1
   |
LL | default unsafe FAIL
   | ^^^^^^^ the `default` qualifier
   |
   = note: only `fn`, `const`, `type`, or `impl` items may be prefixed by `default`

error: expected item, found keyword `unsafe`
  --> $DIR/impl-parsing-2.rs:3:9
   |
LL | default unsafe FAIL
   |         ^^^^^^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 2 previous errors

