tests/ui/parser/impl-parsing-2.rs
impl ! {} // OK

default unsafe FAIL //~ ERROR expected item, found keyword `unsafe`
//~^ ERROR `default` is not followed by an item
